# python-training-website

./: LICENSE  README.md  app.py  pyproject.toml
templates/: home.html
